Fix vertical gap modifier in masonry and parametric layouts
Fixes #525

--- a/packages/block-library/src/blocks/supernova/scss/_collection.scss
+++ b/packages/block-library/src/blocks/supernova/scss/_collection.scss
@@ -156,7 +156,7 @@
 .nb-collection__layout-column {
   display: flex;
   flex-direction: column;
-  gap: var(--nb-grid-spacing);
+  gap: var(--nb-grid-row-spacing);
 }
 
 @mixin pile-3d-small-card {
